added ng-cloak directive app to prevent flashing of template tags while page loads

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -410,3 +410,9 @@ h4 {
         display:block !important;
     } 
 }
+
+/* Hide angular directives in HTML template until fully loaded */
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
