--- a/static/partials/edit-activity.html
+++ b/static/partials/edit-activity.html
@@ -27,8 +27,8 @@
 					<label class="sr-only" for="activityTags">Tags</label>
 					Add Tags (Hold down "Control", or "Command" on a Mac, to select more than one.)
 					<select class="form-control form-fixed-width" id="activityTags" ng-model="activity.tag_IDs" multiple>
-						<option ng-repeat="tag in tags" value="{{tag.id}}" label="{{tag.name}}" ng-if="activity.tags.indexOf(tag) != -1" selected>{{tag.name}}</option>
-						<option ng-repeat="tag in tags" value="{{tag.id}}" label="{{tag.name}}" ng-if="activity.tags.indexOf(tag) == -1">{{tag.name}}</option>
+						<option ng-cloak ng-repeat="tag in tags" value="{{tag.id}}" label="{{tag.name}}" ng-if="activity.tags.indexOf(tag) != -1" selected>{{tag.name}}</option>
+						<option ng-cloak ng-repeat="tag in tags" value="{{tag.id}}" label="{{tag.name}}" ng-if="activity.tags.indexOf(tag) == -1">{{tag.name}}</option>
 					</select>
 					<i class="add-object btn fa fa-plus-circle fa-btn no-pad" id="new-tag" ng-mouseenter="newTagLabel = true" ng-mouseleave="newTagLabel = false" ng-click="newTag()"></i>
 					<span ng-show="newTagLabel">Add new tag</span>
@@ -59,7 +59,7 @@
 				<button class="btn btn-primary pull-right" ng-click="save()">Update Activity</button>
 				<br>
 				<br>
-				<p class="error">{{errors}}</p>
+				<p ng-cloak class="error">{{errors}}</p>
 			</form>
 		</div>
 	</div>
