--- a/static/partials/new-activity.html
+++ b/static/partials/new-activity.html
@@ -56,7 +56,7 @@
 				<button class="btn btn-primary pull-right" ng-click="save()">Add Lesson</button>
 				<br>
 				<br>
-				<p class="error">{{errors}}</p>
+				<p ng-cloak class="error">{{errors}}</p>
 			</form>
 		</div>
 	</div>
