--- a/static/partials/new-step.html
+++ b/static/partials/new-step.html
@@ -32,7 +32,7 @@
 				<button class="btn btn-primary pull-right" ng-click="save()">Add Step</button>
 				<br>
 				<br>
-				<p class="error">{{errors}}</p>
+				<p ng-cloak class="error">{{errors}}</p>
 			</form>
 		</div>
 	</div>
