added another ng-cloak

--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -125,7 +125,7 @@
 
 <div class="container">
 	<span class="pull-right light-pad-vertical">
-	<span ng-show="newCurrLabel" class="tip">Add new curriculum</span>
+	<span ng-cloak ng-show="newCurrLabel" class="tip">Add new curriculum</span>
 	<i class="pull-right add-object btn fa fa-plus-circle fa-btn no-pad-left no-pad-vertical" ng-mouseenter="newCurrLabel = true" ng-mouseleave="newCurrLabel = false" ng-click="newCurriculum()"></i>
 	</span>
 </div>
