--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -88,7 +88,7 @@
 										<!-- Open modal window with activity steps -->
 										<a><i class="btn fa fa-plus fa-btn no-border no-pad" ng-mouseenter="stepLabel = true" ng-mouseleave="stepLabel = false" ng-click="activitySteps(activity.id, activity.steps, 'sm')"></i></a>
 										<!-- Open pre-populated modal window to edit activity -->
-										<i class="btn fa fa-edit fa-md no-border no-pad" ng-mouseenter="activityEditLabel = true" ng-mouseleave="activityEditLabel = false" ng-click="editActivity(activity)"></i> 
+										<a><i class="btn fa fa-edit fa-btn no-border no-pad" ng-mouseenter="activityEditLabel = true" ng-mouseleave="activityEditLabel = false" ng-click="editActivity(activity)"></i></a>
 										<!-- REMOVED: Modal window with related activities. Can open in new window or jump to appropriate section -->
 										<!-- <a><i class="fa fa-plus fa-btn" ng-mouseenter="relatedLabel = true" ng-mouseleave="relatedLabel = false" ng-click="relatedActivities()"></i></a> -->
 									</span>
